--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.10",
+    "@types/geojson": "^7946.0.11",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "firebase": "^10.4.0",
+    "leaflet": "^1.9.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-router-dom": "^6.17.0",
+    "sort-by": "^1.2.0",
     "vite-plugin-progress": "^0.0.7"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
