--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prerender-node": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.3",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "^6.18.0",
